style: fix footer not visible on iphone

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,15 @@
   }
 }
 
+html,
+body {
+  min-height: 100vh; 
+  min-height: -webkit-fill-available;}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
